Fixed card alignment

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,7 +19,7 @@ h1 {
 
 .banner {
   background-image: url('https://images.unsplash.com/photo-1509807995916-c332365e2d9e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4c8d364e633e2015fbac047f327ce098&w=1000&q=80');
-  height: 90vh;
+  height: 80vh;
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -52,4 +52,8 @@ h1 {
   color: rgb(255, 255, 255);
   opacity: 0.6;
   margin-bottom: 30px;
+}
+
+img {
+  border-radius: 6px;
 }
